# RAG_IR

./: .gitignore  D22_CLC_Teaching_Slide_Next_summary.md  RUN.md  WINDOWS_SETUP.md  noi_dung_chi_tiet_slide_rag_fastapi.md
data/: YEU_CAU_NOP_BAI.md  merged_questions.json
hv1/: README.md  cache_store.py  server_answer.py  server_save.py  terminal_answer.py
llm/: .env.example  README.md  chat_cli.py  chat_streamlit.py  pyproject.toml  rag.py  requirements.txt
luat1/: .env  .env.example  README.md  client.py  config.py  download_model.py  llm_client.py  main.py  pyproject.toml  question_bank.py  rag.py  requirements.txt  vector_store.py
v1/: .env.example  README.md  README_offline_rag.md  client.py  config.py  main.py  pyproject.toml  rag.py  rag_engine.py  requirements.txt  versioned_rag.py
v2/: .env.example  README.md  download_model.py  main.py  pyproject.toml  requirements.txt
v3/: .env.example  README.md  client.py  config.py  llm_client.py  main.py  pyproject.toml  requirements.txt  vector_store.py
v4/: .env.example  README.md  client.py  config.py  download_model.py  main.py  pyproject.toml  rag.py  requirements.txt  vector_store.py
v5/: .env.example  README.md  client.py  config.py  document.txt  llm_client.py  main.py  pyproject.toml  rag.py  vector_store.py
