[project]
name = "rag-ir-luat1"
version = "0.1.0"
description = "Student RAG server optimized for Vietnamese legal documents."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "openai",
    "numpy",
    "httpx",
    "chromadb",
    "sentence-transformers",
    "transformers",
    "torch",
]

[tool.uv]
package = false
