[project]
name = "mixi-ir-v1"
version = "0.1.0"
description = "Student RAG server v1, remapped from the previous local v5."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "numpy",
    "scikit-learn",
    "rank-bm25",
    "sentence-transformers",
    "requests",
]

[tool.uv]
package = false
