[project]
name = "rag-ir-v2"
version = "0.1.0"
description = "Student RAG server v2 using all-MiniLM-L6-v2 embeddings."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "openai",
    "numpy",
    "httpx",
    "sentence-transformers",
]

[tool.uv]
package = false
