[project]
name = "rag-ir-v3"
version = "0.1.0"
description = "Student RAG server v3 using multilingual MiniLM embeddings."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "openai",
    "numpy",
    "httpx",
    "sentence-transformers",
]

[tool.uv]
package = false
