[project]
name = "mixi-ir-v3"
version = "0.1.0"
description = "Student RAG server v3, remapped from the previous local v7."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "numpy",
    "scikit-learn",
    "rank-bm25",
    "sentence-transformers",
    "requests",
]

[tool.uv]
package = false
