[project]
name = "rag-ir-v5"
version = "0.1.0"
description = "Student RAG server v5 optimized for structured PTIT admissions text."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "openai",
    "numpy",
    "httpx",
    "chromadb",
    "sentence-transformers",
    "transformers",
    "torch",
]

[tool.uv]
package = false
